[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Menus/GameOver/GameOverScreen.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menus/GameOver/GameOverScreen.gd" type="Script" id=2]

[node name="GameOverScreen" type="Node"]
script = ExtResource( 2 )

[node name="GameOverScreenBkgrnd" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 1 )

[node name="ExitBtn" type="Button" parent="."]
margin_left = 9.0
margin_top = 151.0
margin_right = 44.0
margin_bottom = 171.0
text = "Exit"

[node name="ReplayBtn" type="Button" parent="."]
margin_left = 8.0
margin_top = 94.0
margin_right = 62.0
margin_bottom = 114.0
text = "Replay"

[node name="MainMenuBtn" type="Button" parent="."]
margin_left = 9.0
margin_top = 123.0
margin_right = 92.0
margin_bottom = 143.0
text = "Main Menu"
